Save data how promote how clean all waring for sonar qube starting implementing more tests